[package]
name = "sled-rest"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sled storage engine
sled = "0.32.0-rc1"
# Actix HTTP Server
actix-web = "2.0"
actix-rt = "1.1.1"
# Bytes (Used by actix-web)
bytes = "0.5.4"
